--- a/style.css
+++ b/style.css
@@ -20,26 +20,6 @@
   font-size: 10px;
   scroll-behavior: smooth;
 }
-.accessible-navbar{
-  position: relative;
-  width: 300px;
-  padding: 10px 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  border: 1px solid var(--black);
-  transform: translateY(-100%);
-  font-size: 2rem;
-  color: var(--black);
-  text-decoration: none;
-  font-family: 'din-bold';
-}
-
-.accessible-navbar:focus{
-  transform: translateY(0);
-}
 .bold{
   font-family: 'din-bold';
   font-size: inherit;
@@ -48,7 +28,7 @@ body{
   width: 100%;
   height: 100%;
   background-color: var(--bg-color);
-  padding:  0 30px;
+  padding:  0 50px;
 }
 svg{
   height: fit-content;
@@ -80,7 +60,7 @@ svg{
   border-radius: 40px;
   border: 1px solid black;
   margin: auto;
-  padding: 0 20px;
+  padding:  30px;
   transition:  opacity 0.3s ease;
   display: flex;
   justify-content: space-between;
@@ -108,8 +88,8 @@ svg{
   position: relative;
   text-decoration: none;
   color: var(--black);
-  font-size: 1.7rem;
-  margin-left: 10px;
+  font-size: 2.9rem;
+  margin-left: 30px;
 }
 .item a:after{
 content: "";
@@ -166,9 +146,11 @@ transform-origin: right;
 }
 .cards-wrap{
   position: absolute;
-  width: 100%;
+  width: 95%;
   display: flex;
-  justify-content: space-evenly;
+  left: 50%;
+  transform: translateX(-50%);
+  justify-content: space-between;
   height: 100%;
 
 }
@@ -181,7 +163,7 @@ transform-origin: right;
 .card{
   display: block;
   position: relative;
-  width: 45%;
+  width: 47%;
   padding: 40px;
   min-height: 400px;
   height: 100%;
@@ -251,7 +233,7 @@ display: block;
 .faq-item{
   padding:  20px 30px;
   border: 1px solid var(--black);
-  width: 50%;
+  width: 95%;
   margin: auto;
   position: relative;
   border-bottom: 0;
@@ -287,7 +269,7 @@ display: block;
   transform: rotate(45deg);
 }
 .question .label{
-  font-size: 2rem;
+  font-size: 2.9rem;
   font-family: 'din-bold' ;
 }
 .reponse-block{
@@ -306,7 +288,7 @@ display: block;
   overflow: hidden;
 }
 .reponse{
-  font-size: 1.7rem;
+  font-size: 2.6rem;
 }
 .phone-number{
   font-size: 18rem;
