--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
   height: 100%;
   background-color: var(--bg-color);
   padding:  0 50px;
+  overflow-x: hidden;
 }
 svg{
   height: fit-content;
@@ -60,7 +61,7 @@ svg{
   border-radius: 40px;
   border: 1px solid black;
   margin: auto;
-  padding:  30px;
+  padding:  10px 30px;
   transition:  opacity 0.3s ease;
   display: flex;
   justify-content: space-between;
@@ -88,7 +89,7 @@ svg{
   position: relative;
   text-decoration: none;
   color: var(--black);
-  font-size: 2.9rem;
+  font-size: 1.9rem;
   margin-left: 30px;
 }
 .item a:after{
@@ -152,6 +153,7 @@ transform-origin: right;
   transform: translateX(-50%);
   justify-content: space-between;
   height: 100%;
+  max-width: 1300px;
 
 }
 @media screen and (max-width: 800px ) {
@@ -163,15 +165,12 @@ transform-origin: right;
 .card{
   display: block;
   position: relative;
-  width: 47%;
+  width: 600px;
   padding: 40px;
-  min-height: 400px;
-  height: 100%;
-  max-height: 80%;
+  height: 600px;
   border-radius: 2rem;
-  transition: border-radius 0.4s ease-in-out;
+  transition: border-radius 0.2s ease-in-out;
   background-color: var(--black);
-
 }
 @media screen and (max-width: 800px ) {
   .card{
@@ -187,15 +186,14 @@ transform-origin: right;
   background-color: transparent;
   border: 1px solid var(--black);
   padding: 0;
-display: block;
-  height: 100%;
+  display: block;
   overflow: hidden;
 }
 .photo-card{
   position: relative;
   width: 100%;
   height: 100%;
-  transition: transform 0.4s linear;
+  transition: transform 0.2s linear;
   object-fit: cover;
   object-position: center center;
 }
@@ -211,30 +209,80 @@ display: block;
   line-height: 1.2;
 }
 
+.bandeau{
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    /* overflow-x: hidden; */
+    width: 100%;
+    height: auto;
+    transform: rotate(-5deg) translateY(-110px);
+
+
+
+  }
+  .inner-bandeau{
+  border: 1px solid var(--black);
+  position: relative;
+  width: 150%;
+  display: flex;
+  justify-content: start;
+  margin-right: 10px;
+  padding: 20px 0;
+  transform: translateX(-10%);
+}
+
+.panne {
+  position: relative;
+  animation: slide 20s linear infinite;
+  cursor: default;
+  white-space: nowrap;
+  font-size: 4rem;
+  text-align: start;
+  padding-right: 10px;
+}
+.section-contact{
+  position: relative;
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  width: 100%;
+  padding: 0 30px;
+}
+
+.phone-number{
+  font-size: 2.9rem;
+}
+.email{
+  font-size: 2.9rem;
+}
+.adresse{
+  font-size: 2.9rem;
+}
 .section-faq{
   position: relative;
   width: 100%;
+  padding: 0 30px;
+
 }
 .section-title{
-  font-size: 7rem;
-  text-align: center;
+  font-size: 5rem;
+  text-align: start;
   text-transform: uppercase;
   margin-bottom: 40px;
 }
 .faq-wrap{
-  position: relative;
-  display: flex;
-  justify-content: start;
-  align-items: center;
+  position: block;
   width: 100%;
-  display: inline;
-
+  position: relative;
 }
 .faq-item{
   padding:  20px 30px;
   border: 1px solid var(--black);
-  width: 95%;
-  margin: auto;
+  width: 100%;
   position: relative;
   border-bottom: 0;
 }
@@ -290,6 +338,11 @@ display: block;
 .reponse{
   font-size: 2.6rem;
 }
-.phone-number{
-  font-size: 18rem;
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
