--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ body{
   padding:  0 50px;
   overflow-x: hidden;
 }
+@media screen and (max-width: 700px) {
+  body{
+    padding: 0 15px;
+  }
+}
 svg{
   height: fit-content;
   color: var(--black);
@@ -62,6 +67,16 @@ svg{
   width: 450px;
   height: auto;
 }
+@media screen and (max-width: 1100px) {
+  .home-image{
+    width: 400px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .home-image{
+    width: 300px;
+  }
+}
 .navbar{
   position: fixed;
   top: 40px;
@@ -82,6 +97,14 @@ svg{
   align-items: center;
   opacity: 0;
 }
+@media screen and (max-width: 560px) {
+  .navbar{
+    justify-content: center;
+    top: 5px;
+    padding: 10px ;
+  }
+}
+
 .navbar:focus {
   opacity: 1;
 }
@@ -92,7 +115,17 @@ svg{
   display: flex;
   justify-content: center;
   list-style: none;
-
+}
+@media screen and (max-width: 560px) {
+  .navbar .list{
+    width: 100%;
+    justify-content: space-evenly;
+  }
+}
+@media screen and (max-width: 560px) {
+  .navbar .list{
+    padding-left: 5px;
+  }
 }
 .logo-small{
   width: 100px;
@@ -105,6 +138,12 @@ svg{
   color: var(--black);
   font-size: 1.9rem;
   margin-left: 30px;
+}
+@media screen and (max-width: 560px) {
+  .item a{
+    margin-left: 0px;
+
+  }
 }
 .item a:after{
 content: "";
@@ -142,12 +181,17 @@ transform-origin: right;
 .subtitle-wrap{
   position: relative;
   margin-top: 30px;
-
 }
 .subtitle{
   display: block;
   font-size: 3rem;
   text-transform: uppercase;
+}
+@media screen and (max-width: 1100px) {
+  .subtitle{
+    font-size: 2rem;
+
+  }
 }
 .floating{
   content: '';
@@ -157,6 +201,12 @@ transform-origin: right;
   bottom: -10px;
   height: 3px;
   background-color: #000000;
+}
+@media screen and (max-width: 1100px) {
+  .floating{
+    width: 300px;
+
+  }
 }
 .section-cards{
   position: relative;
@@ -308,6 +358,11 @@ margin-bottom: 150px;
   align-items: start;
   justify-content: space-around;
 }
+@media screen and (max-width: 1100px) {
+  .tarif-wrap{
+    flex-direction: column;
+  }
+}
 .tarif-wrap .item{
   display: flex;
   position: relative;
@@ -323,7 +378,11 @@ margin-bottom: 150px;
   font-size: 2rem;
   border-top-right-radius: 420px;
   border-top-left-radius:420px;
-
+}
+@media screen and (max-width: 1100px) {
+  .tarif-wrap .item{
+      margin-bottom: 30px;
+  }
 }
 .tarif-wrap .item .circle{
   position: relative;
