--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ svg{
 @media screen and (max-width: 560px) {
   .navbar{
     justify-content: center;
-    top: 5px;
+    top: 15px;
     padding: 10px ;
   }
 }
@@ -225,6 +225,18 @@ transform-origin: right;
 @media screen and (max-width: 1100px) {
   .floating{
     width: 300px;
+
+  }
+}
+@media screen and (max-width: 700px) {
+  .floating{
+    width: 200px;
+
+  }
+}
+@media screen and (max-width: 400px) {
+  .floating{
+    width: 200px;
 
   }
 }
@@ -514,6 +526,20 @@ transition: width 0.6s ease;
 .tarif .list .list-item:hover .line{
   width: 100%;
 }
+.tarif .list .list-item:hover .price{
+  animation: colorChange 0s ease forwards;
+  animation-delay: 0.4s;
+  color: var(--bg-color)
+}
+
+@keyframes colorChange {
+  0%{
+    color: var(--bg-color) ;
+  }
+  100%{
+    color: var(--yellow);
+  }
+}
 @media screen and (max-width:700px) {
 
   .tarif .list .list-item .line{
@@ -639,7 +665,7 @@ transition: width 0.6s ease;
   font-size: 2.9rem;
 }
 .section-faq{
-  opacity: 0;
+  opacity: 1;
   z-index: 100;
   position: fixed;
   width: 70%;
@@ -648,7 +674,12 @@ transition: width 0.6s ease;
   right:0;
   padding: 0px 30px;
   transform: translateX(100%);
-  transition: transform 0.5s ease-in-out, opacity 2s;
+  transition: transform 0.5s ease-in-out, opacity 0s;
+}
+@media screen and (max-width: 1000px) {
+  .section-faq{
+    width: 100%;
+  }
 }
 .overlay{
   width: 100%;
@@ -676,8 +707,12 @@ transition: width 0.6s ease;
   transition: transform 0.5s ease-in-out, opacity 0s;
 
 }
-.inner-section-faq{
+.section-faq.open .inner-section-faq{
   box-shadow: -1px 3px 90px 0px #000000;
+
+}
+.inner-section-faq{
+  box-shadow: 0;
   width: 100%;
   z-index: 1000;
   background-color: #ddc3af;
