--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   --black: rgb(30, 27, 27);
   --taille-texte: 16px;
   --red-faded:rgba(242, 73, 21, 0.674);
-  --yellow: #EAD74F;
+  --yellow: #3EA265;
 }
 *,
 *::before,
@@ -56,6 +56,7 @@ body{
 @media screen and (max-width: 700px) {
   .wrapper{
     max-width: 95%;
+    margin-bottom: 70px;
   }
 }
 svg{
@@ -86,6 +87,7 @@ svg{
   transform: translateY(-15%);
   align-self: center;
   margin-bottom: auto;
+  opacity: 0;
 }
 @media screen and (max-width: 1100px) {
   .home-image{
@@ -192,6 +194,7 @@ transform-origin: right;
   flex-direction: column;
   height: auto;
   margin-top: 150px;
+
 }
 .title{
   position: relative;
@@ -205,6 +208,7 @@ transform-origin: right;
 .subtitle{
   display: block;
   font-size: 3rem;
+  opacity: 0;
   text-transform: uppercase;
 }
 @media screen and (max-width: 1100px) {
@@ -216,30 +220,13 @@ transform-origin: right;
 .floating{
   content: '';
   position: absolute;
-  width: 400px;
+  width: 0;
   left: 0;
   bottom: -10px;
   height: 3px;
   background-color: #000000;
 }
-@media screen and (max-width: 1100px) {
-  .floating{
-    width: 300px;
 
-  }
-}
-@media screen and (max-width: 700px) {
-  .floating{
-    width: 200px;
-
-  }
-}
-@media screen and (max-width: 400px) {
-  .floating{
-    width: 200px;
-
-  }
-}
 .section-cards{
   position: relative;
   height: auto;
@@ -248,10 +235,11 @@ transform-origin: right;
   width: 100%;
   position: relative;
   display: flex;
+  gap: 30px;
   justify-content: space-between;
 }
 
-@media screen and (max-width: 950px ) {
+@media screen and (max-width: 1050px ) {
   .cards-wrap{
       align-items: center;
       flex-direction: column-reverse;
@@ -270,19 +258,18 @@ transform-origin: right;
   transition: border-radius 0.2s ease-in-out;
   background-color: var(--black);
 }
-@media screen and (max-width: 1200px ) {
-  .card{
-    width: 450px;
-    height: 500px;
-    margin-top: 30px;
-  }
+.card .bold{
+  color: var(--yellow)
+
 }
-@media screen and (max-width: 800px ) {
+@media screen and (max-width: 1050px ) {
   .card{
     width: 100%;
+    height: fit-content;
     margin-top: 30px;
   }
 }
+
 @media screen and (max-width: 950px ) {
   .card{
     width: 100%;
@@ -296,35 +283,93 @@ transform-origin: right;
 }
 .card:first-child{
   background-color: transparent;
-  border: 1px solid var(--black);
   padding: 0;
-  display: block;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
   overflow: hidden;
-
+}
+.card:first-child:hover{
+  border-radius: 0;
+}
+.card:first-child .pill{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 5px;
+  min-height: 100px;
 }
 @media screen and (max-width: 950px ) {
+.card:first-child .pill{
+
+}
+}
+.inside-1{
+  grid-column: 1 / 5;
+  background-color: var(--black);
+  margin-top: 5px;
+  background-image: url('./assets/images/gravel.png');
+  background-blend-mode: multiply;
+
+  border-radius: 2rem;
+
+}
+.inside-2{
+  grid-column: 1 / 5;
+  border-radius: 2rem;
+  grid-row: 2;
+  background-color: var(--yellow);
+  background-image: url('./assets/images/gravel.png');
+  background-blend-mode: multiply;
+
+  margin-bottom: 5px;
+}
+@media screen and (max-width: 1050px ) {
 .card:first-child{
-  display: flex;
-  justify-content: center;
-  border: none;
+  align-self: self-start;
+  flex-direction: row;
+  gap: 10px;
 }
 }
+@media screen and (max-width: 930px ) {
+  .card:first-child{
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+  }
+  }
+.image-wrap{
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+@media screen and (max-width: 1050px ) {
+  .image-wrap{
+    position: relative;
+    width: 500px;
+  }
+}
+@media screen and (max-width: 930px ) {
+  .image-wrap{
+    width: fit-content;
+  }
+  }
 .photo-card{
   position: relative;
   width: 100%;
   height: 100%;
+  min-width: 500px;
   transition: transform 0.2s linear;
   object-fit: cover;
   object-position: center center;
 }
-.photo-card:hover{
-  transition: transform 3s linear;
-  transform: scale(1.05);
-
-}
 @media screen and (max-width: 950px ) {
   .photo-card{
-    width: 400px;
+    width: 500px;
   }
 }
 
@@ -398,9 +443,8 @@ transform-origin: right;
   padding-right: 10px;
 }
 .section-tarifs{
-margin-bottom: 150px;
 background-color: var(--black);
-padding: 90px 60px 60px;
+padding: 60px 60px 60px;
 border-radius: 2rem;
 transition: border-radius 0.2s ease-in-out;
 
@@ -440,9 +484,20 @@ transition: border-radius 0.2s ease-in-out;
   padding-bottom: 30px;
   color: var(--yellow);
 }
+@media screen and (max-width: 450px) {
+  .tarif .title {
+    padding-bottom: 20px;
+
+  }
+}
 .tarif .list{
   padding-left: 30px;
   list-style: none;
+}
+@media screen and (max-width: 450px) {
+  .tarif .list  {
+  padding-left: 0;
+  }
 }
 .tarif .list .list-item {
   padding-bottom: 10px;
@@ -453,17 +508,22 @@ transition: border-radius 0.2s ease-in-out;
 }
 @media screen and (max-width:700px) {
   .tarif .list .list-item{
-    justify-content: start;
-
+    /* justify-content: start; */
   }
 }
-@media screen and (max-width:400px) {
+@media screen and (max-width:450px) {
+  .tarif .list .list-item{
+    align-items: center;
+  }
+}
+
+/* @media screen and (max-width:400px) {
   .tarif .list .list-item{
     flex-direction: column;
     align-items: start;
 
   }
-}
+} */
 .tarif .list .list-item:before {
   content: '';
   position: absolute;
@@ -475,7 +535,11 @@ transition: border-radius 0.2s ease-in-out;
   background-color: var(--bg-color);
   transform: translateY(-100%);
 }
-
+@media screen and (max-width: 450px) {
+  .tarif .list .list-item:before {
+    display: none;
+  }
+}
 .tarif .list .list-item, .list-item span {
   font-size: 2rem;
   /* line-height: 1.5; */
@@ -493,10 +557,18 @@ transition: border-radius 0.2s ease-in-out;
   background-color: var(--black);
   cursor: default;
   font-size: 2.2rem;
+  flex: 0 0 auto;
+
 }
 @media screen and (max-width:700px) {
   .tarif .list .list-item .price {
     font-size: 2rem;
+  }
+}
+@media screen and (max-width:450px) {
+  .tarif .list .list-item .price{
+    padding-left: 0;
+    font-size: 1.6rem;
   }
 }
 .tarif .list .list-item .service{
@@ -566,6 +638,9 @@ transition: width 0.6s ease;
 .tarif .list .list-item.sub{
   position: relative;
 }
+.tarif .list .list-item .service{
+  max-width: none;
+}
 .tarif .list .list-item.sub::before{
   content: '';
   position: absolute;
@@ -599,14 +674,17 @@ transition: width 0.6s ease;
   align-items: start;
   flex-direction: column;
   width: 100%;
-  margin-top: 150px;
+  margin-bottom: 30px;
 }
 .contact-wrap{
   display: flex ;
   align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 500px) {
   .contact-wrap{
     flex-direction: column;
   }
@@ -615,16 +693,22 @@ transition: width 0.6s ease;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 500px;
+  width: 400px;
   border-top-right-radius:56rem;
   border-top-left-radius:35rem;
   overflow: hidden;
-  /* height: 500px; */
   transition: border-radius 0.4s ease;
+  flex: 0 0 auto;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1050px) {
   .contact-image-wrap{
     width: 300px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .contact-image-wrap{
+    width: 200px;
+
   }
 }
 @media screen and (max-width: 500px) {
@@ -641,29 +725,21 @@ transition: width 0.6s ease;
   width: 100%;
   display: block;
 }
-.content-wrap{
-  position: relative;
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-}
+
 .phone-number{
   width: 100%;
   color: var(--black);
-  margin-bottom: 15px;
+  margin-bottom: 30px;
+  max-width: 900px;
 }
 .email{
-  font-size: 2.9rem;
-  margin-bottom: 15px;
+  /* font-size: 7rem; */
+  font-family: 'gilton';
+  color: var(--black);
+  font-size: clamp(1.9rem, 6vw, 7rem);
+
 }
-@media screen and (max-width: 1000px) {
-  .email{
-    font-size: 1.9rem;
-  }
-}
-.adresse{
-  font-size: 2.9rem;
-}
+
 .section-faq{
   opacity: 1;
   z-index: 100;
@@ -723,14 +799,22 @@ transition: width 0.6s ease;
   overflow: auto;
   padding-bottom: 50px;
 }
+@media screen and (max-width: 800px) {
+  .inner-section-faq{
+    padding: 60px 15px 0;
+  }
+}
   .close {
     position: absolute;
     left: 32px;
     top: 110px;
     width: 32px;
     height: 32px;
-
-
+  }
+  @media screen and (max-width: 800px) {
+    .close{
+      top: 40px
+    }
   }
   .close:hover{
     cursor: pointer;
@@ -756,7 +840,7 @@ transition: width 0.6s ease;
   font-family: 'gilton';
   margin: auto;
   text-transform: uppercase;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 
 }
 .section-title.reverse{
@@ -774,6 +858,7 @@ transition: width 0.6s ease;
   position: relative;
   border-bottom: 0;
 }
+
 .faq-item:first-child{
 
   border-top-left-radius: 2rem;
@@ -804,9 +889,22 @@ transition: width 0.6s ease;
 .plus-icon.opened{
   transform: rotate(45deg);
 }
+@media screen and (max-width: 1000px) {
+  .plus-icon{
+    font-size: 2rem;
+    margin-left: 20px;
+    opacity: 1;
+  }
+
+}
 .question .label{
   font-size: 2.9rem;
   font-family: 'din-bold' ;
+}
+@media screen and (max-width: 1000px) {
+  .question .label{
+    font-size: 2rem;
+  }
 }
 .reponse-block{
   display: grid;
@@ -826,11 +924,83 @@ transition: width 0.6s ease;
 .reponse{
   font-size: 2.6rem;
 }
+@media screen and (max-width: 1000px) {
+  .reponse{
+    font-size: 1.8rem;
+  }
+  .reponse-block.opened{
+    margin-top: 10px;
+    grid-template-rows: 1fr;
+  }
+}
 @keyframes slide {
   0% {
     transform: translateX(0);
   }
   100% {
     transform: translateX(-100%);
+  }
+}
+.title path {
+  transform: rotate(45deg) translateY(100px);
+}
+@keyframes textReveal {
+  0%{
+    transform: rotate(20deg) translateY(150px);
+  }
+  100%{
+    transform: rotate(0deg) translateY(0);
+  }
+}
+@keyframes subtitleReveal {
+  0%{
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes floatingLine {
+  0%{
+    opacity: 0;
+    width: 0;
+  }
+  100%{
+    opacity: 1;
+    width: 400px;
+  }
+}
+@keyframes floatingLineDown1100 {
+  0%{
+    opacity: 0;
+    width: 0;
+  }
+  100%{
+    opacity: 1;
+    width: 300px;
+  }
+}
+@keyframes floatingLineDown700 {
+  0%{
+    opacity: 0;
+    width: 0;
+  }
+  100%{
+    opacity: 1;
+    width: 200px;
+  }
+}
+
+@keyframes homeImage {
+  0%{
+    opacity: 0;
+    transform: translateY(10px);
+
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(-15%);
   }
 }
