--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
   text-decoration: underline;
 }
 body{
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: var(--bg-color);
   overflow-x: hidden;
