--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
   text-decoration: underline;
 }
 body{
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-color: var(--bg-color);
   overflow-x: hidden;
@@ -423,10 +423,10 @@ transform-origin: right;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    width: 105vw;
+    width: 100%;
     height: auto;
     overflow: hidden;
-    transform: rotate(-5deg) translateX(-2%);
+    /* transform: rotate(-5deg) translateX(-2%); */
   }
 
   .inner-bandeau{
