--- a/style.css
+++ b/style.css
@@ -418,7 +418,7 @@ transform-origin: right;
   width: 100%;
   margin-top: 75px;
   margin-bottom: 75px;
-  height: 300px;
+  height: auto;
 }
 @media screen and (min-width: 1700px ) {
   .bandeau-wrap{
