--- a/style.css
+++ b/style.css
@@ -44,7 +44,9 @@ body{
   background-color: var(--bg-color);
   overflow-x: hidden;
 }
-
+main{
+  overflow: hidden;
+}
 .wrapper{
   width: 100%;
   max-width: 90%;
@@ -420,6 +422,7 @@ transform-origin: right;
   margin-bottom: 75px;
   height: auto;
 }
+
 @media screen and (min-width: 1700px ) {
   .bandeau-wrap{
     opacity: 0;
