--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   --black: rgb(30, 27, 27);
   --taille-texte: 16px;
   --red-faded:rgba(242, 73, 21, 0.674);
-  --yellow: #3EA265;
+  --primary-color: #3EA265;
 }
 *,
 *::before,
@@ -54,6 +54,11 @@ main{
   margin-left: auto;
   margin-bottom: 150px;
 
+}
+@media screen and (min-width: 1500px) {
+  .wrapper{
+    max-width: 1400px;
+  }
 }
 @media screen and (max-width: 700px) {
   .wrapper{
@@ -143,7 +148,14 @@ svg{
 @media screen and (max-width: 560px) {
   .navbar .list{
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: end;
+    flex: 1 1 auto;
+  }
+  .navbar .item{
+    padding-right: 10px;
+  }
+  .item.faq-link{
+    padding-right: 0;
   }
 }
 @media screen and (max-width: 560px) {
@@ -151,10 +163,20 @@ svg{
     padding-left: 5px;
   }
 }
+.logo-box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .logo-small{
   width: 100px;
-  height: auto;
-
+  height: 42px;
+}
+@media screen and (max-width: 800px) {
+  .logo-small{
+    width: 90px;
+    height: 39px;
+  }
 }
 .item a{
   position: relative;
@@ -162,6 +184,7 @@ svg{
   color: var(--black);
   font-size: 1.9rem;
   margin-left: 30px;
+  z-index: 1;
 }
 @media screen and (max-width: 560px) {
   .item a{
@@ -175,17 +198,17 @@ position: absolute;
 width: 100%;
 bottom: 0;
 left: 0;
-height: 1px;
-background-color: var(--black);
+height: 6px;
+border-radius: 6px;
+background-color: var(--primary-color);
 transition: transform 0.3s ease-in-out;
 transform: scaleX(0);
 transform-origin: right;
+z-index: -1;
 }
 .item a:hover:after{
   transform: scaleX(1);
   transform-origin: left;
-
-
 }
 .title-wrap{
   display: block;
@@ -262,7 +285,7 @@ transform-origin: right;
   background-color: var(--black);
 }
 .card .bold{
-  color: var(--yellow)
+  color: var(--primary-color)
 
 }
 @media screen and (max-width: 1050px ) {
@@ -283,6 +306,14 @@ transform-origin: right;
 .card:hover{
   border-radius: 7rem;
   cursor: default;
+}
+@media screen and (max-width: 950px) {
+  .card:hover{
+    border-radius: 2rem;
+  }
+  .section-tarifs:hover{
+    border-radius: 2rem !important;
+  }
 }
 .card:first-child{
   background-color: transparent;
@@ -325,7 +356,7 @@ transform-origin: right;
   grid-column: 1 / 5;
   border-radius: 2rem;
   grid-row: 2;
-  background-color: var(--yellow);
+  background-color: var(--primary-color);
   background-image: url('./assets/images/gravel.png');
   background-blend-mode: multiply;
 
@@ -389,11 +420,6 @@ transform-origin: right;
   margin-bottom: 10px;
   line-height: 1.5;
 
-}
-@media screen and (max-width: 1355px ) {
-  .text {
-    font-size: 2.7rem;
-  }
 }
 @media screen and (max-width: 1250px ) {
   .text {
@@ -469,6 +495,11 @@ transform-origin: right;
   text-align: start;
   padding-right: 10px;
 }
+@media screen and (max-width: 700px) {
+.panne {
+  font-size: 2.7rem;
+}
+}
 .section-tarifs{
 background-color: var(--black);
 padding: 60px 60px 60px;
@@ -509,7 +540,7 @@ transition: border-radius 0.2s ease-in-out;
   font-size: 3rem;
   font-family: 'gilton';
   padding-bottom: 30px;
-  color: var(--yellow);
+  color: var(--primary-color);
 }
 @media screen and (max-width: 450px) {
   .tarif .title {
@@ -544,13 +575,6 @@ transition: border-radius 0.2s ease-in-out;
   }
 }
 
-/* @media screen and (max-width:400px) {
-  .tarif .list .list-item{
-    flex-direction: column;
-    align-items: start;
-
-  }
-} */
 .tarif .list .list-item:before {
   content: '';
   position: absolute;
@@ -569,7 +593,6 @@ transition: border-radius 0.2s ease-in-out;
 }
 .tarif .list .list-item, .list-item span {
   font-size: 2rem;
-  /* line-height: 1.5; */
   color: var(--bg-color);
 
 }
@@ -619,7 +642,7 @@ z-index: 0;
 left: 0%;
 transform: translateY(-80%);
 height: 1px;
-background-color: var(--bg-color);
+background-color: var(--primary-color);
 transition: width 0.6s ease;
 }
 .tarif .list .list-item:hover .line{
@@ -636,7 +659,7 @@ transition: width 0.6s ease;
     color: var(--bg-color) ;
   }
   100%{
-    color: var(--yellow);
+    color: var(--primary-color);
   }
 }
 @media screen and (max-width:700px) {
@@ -648,14 +671,14 @@ transition: width 0.6s ease;
 .tarif .list .sub span{
   padding-left: 40px;
   font-size: 1.6rem;
-  color: var(--yellow) !important;
+  color: var(--primary-color) !important;
 
 }
 .tarif .list .sub .price{
   position: relative;
   padding-left: 20px;
   font-size: 1.6rem;
-  color: var(--yellow) !important;
+  color: var(--primary-color) !important;
 }
 @media screen and (max-width:700px) {
   .tarif .list .sub {
@@ -678,7 +701,7 @@ transition: width 0.6s ease;
   width: 8px;
   height: 8px;
   z-index: 10;
-  background-color: var(--yellow);
+  background-color: var(--primary-color);
   font-size: 2rem;
 }
 @media screen and (max-width:700px) {
@@ -691,7 +714,7 @@ transition: width 0.6s ease;
     border-radius: 8px;
     width: 8px;
     height: 8px;
-    background-color: var(--yellow);
+    background-color: var(--primary-color);
     font-size: 2rem;
   }
 }
