--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body{
   height: 100%;
   background-color: var(--bg-color);
   overflow-x: hidden;
+  overscroll-behavior: none;
 }
 main{
   overflow: hidden;
