--- a/source/style.css
+++ b/source/style.css
@@ -724,6 +724,71 @@ transition: width 0.6s ease;
     font-size: 2rem;
   }
 }
+.section-photos{
+  position: relative;
+  background-color: var(--black);
+  padding: 60px;
+  border-radius: 2rem;
+  transition: border-radius 0.4s ease;
+}
+.section-photos:hover{
+  border-radius: 7rem;
+}
+.grid-wrap{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 10px;
+}
+.section-photos .image-wrap{
+  position: relative;
+  width: auto;
+  align-self: center;
+  justify-self: start;
+  border-radius: 1.3rem;
+  overflow: hidden;
+
+}
+.section-photos .photo{
+  position: relative;
+  width: 100%;
+
+}
+.section-photos .icon-wrap{
+  grid-column:span 2;
+  justify-self: start;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+@media screen and (max-width: 700px) {
+  .section-photos{
+    padding: 40px 25px;
+  }
+  .grid-wrap{
+    display: flex;
+    flex-direction: column;
+  }
+  .image-wrap{
+    width: 100%;
+    /* max-width: 400px; */
+  }
+}
+
+
+@media screen and (max-width: 500px) {
+  .section-photos:hover{
+    border-radius: 2rem;
+  }
+  .section-photos .section-title{
+      font-size: 4rem;
+  }
+
+}
+
 .section-contact{
   position: relative;
   display: flex;
