--- a/source/style.css
+++ b/source/style.css
@@ -753,17 +753,7 @@ transition: width 0.6s ease;
   width: 100%;
 
 }
-.section-photos .icon-wrap{
-  grid-column:span 2;
-  justify-self: start;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10px;
-}
+
 @media screen and (max-width: 700px) {
   .section-photos{
     padding: 40px 25px;
@@ -772,7 +762,7 @@ transition: width 0.6s ease;
     display: flex;
     flex-direction: column;
   }
-  .image-wrap{
+  .section-photos .image-wrap{
     width: 100%;
     /* max-width: 400px; */
   }
